--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <script src="script.js"></script>
         <!--<script src="apps.js"></script>-->
         <div class="footer">
-            <p>Authors: <a href="https://github.com/Ahtritus" target="_blank">Sutirtha Bharati Das</a>, <a href="https://github.com/SayakDas10" target="_blank">Sayak Das</a></p>
+            <p>Authors: <a href="https://github.com/Ahtritus/Corona-Tracker-Website" target="_blank">Sutirtha Bharati Das</a>, <a href="https://github.com/SayakDas10/Covid-19-Tracker-Website-HTML-CSS-JavaScript" target="_blank">Sayak Das</a></p>
         </div>
             
           
